Create new files

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/script.js"></script>
 <title>Page Title</title>
 </head>
 
@@ -9,6 +11,17 @@
 
 <h1>Hello World!</h1>
 <p>This is just a test</p>
+<br>
+
+<button type="button" onclick="hello()">Click Me!</button>
+
+<button type="button" onclick="readTextFile()">test</button>
+
+<pre>
+Testing to see how well this is
+here is another line
+BOOM
+</pre>
 
 </body>
 
