Update main files

--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
 
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/script.js"></script>
 <script src="data/default-curriculums.js"></script>
-<title>Page Title</title>
+<script src="js/script.js"></script>
+<link rel="stylesheet" href="css/main.css">
+<title>MSE Course Alligator</title>
 </head>
 
 <body>
 
 <h1>Hello World!</h1>
 <p>This is just a test</p>
-<br>
+<br><br>
 
+<div id="grid"></div>
+
+<div id="textContainer"></div>
+
+
+<br><br>
 <button type="button" onclick="hello()">Click Me!</button>
 
-<button type="button" onclick="readTextFile()">test</button>
+<button type="button" onclick="hello()">test</button>
 
 <pre>
 Testing to see how well this is
