Update main files
Added prereqs and respective arrows

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="data/default-curriculums.js"></script>
+<script src="data/courseData.js"></script>
 <script src="js/script.js"></script>
 <link rel="stylesheet" href="css/main.css">
 <title>MSE Course Alligator</title>
@@ -13,6 +14,7 @@
 
 <h1>Hello World!</h1>
 <p>This is just a test</p>
+<p>NOTE: has not yet been developed for touch-screen use.</p>
 <br><br>
 
 <div id="grid"></div>
@@ -30,6 +32,14 @@ Testing to see how well this is
 here is another line
 BOOM
 </pre>
+
+
+<!-- <div id="myDIV" class="drag" width="200px"><div>1</div></div> -->
+
+
+
+
+<div id="allSVGs"></div>
 
 </body>
 
