--- a/index.html
+++ b/index.html
@@ -23,15 +23,9 @@
 
 
 <br><br>
-<button type="button" onclick="hello()">Click Me!</button>
 
-<button type="button" onclick="hello()">test</button>
-
-<pre>
-Testing to see how well this is
-here is another line
-BOOM
-</pre>
+<p>click on a course to see details</p>
+<p>you can also move the courses by dragging and dropping</p>
 
 
 <!-- <div id="myDIV" class="drag" width="200px"><div>1</div></div> -->
