Update project: Added default and custom curriculums
- Added default and custom curriculums
- Added import/export curriculum feature

--- a/tools/csv2js-courses.html
+++ b/tools/csv2js-courses.html
@@ -129,7 +129,7 @@ code {
 
 <label><u>Please fill before importing file</u></label><br><br>
 <label for="varname">variable name:</label>
-<input type="text" id="varname" name="varname" value="courses"><br>
+<input type="text" id="varname" name="varname" value="courseData"><br>
 <input type='file' accept='text/csv' onchange='openFile(event)'><br>
 
 
