--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <option value="import">Import...</option>
         <option value="custom" hidden>Custom</option>
     </select><br>
-    <button type="button" onclick="exportCurriculum();">Export</button>
+    <button type="button" id="exportButton" onclick="exportCurriculum();">Export</button>
     <!-- <br><button type="button" onclick="showDialogBox('importDialogBox');">Import</button> -->
 </div>
 
@@ -61,7 +61,9 @@
 
 <div id="exportDialogBox" class="dialogBox"><div>
     <button class="close"
-            onclick="hideDialogBox('exportDialogBox')"> &times </button>
+            onclick="hideDialogBox('exportDialogBox')">
+            &times 
+    </button>
     <div>
         <pre id="exportOutput">export code will appear here</pre>
         <button id="copyExportButton">Copy Contents</button>
@@ -70,7 +72,9 @@
 
 <div id="importDialogBox" class="dialogBox"><div>
     <button class="close"
-            onclick="hideDialogBox('importDialogBox')"> &times </button>
+            onclick="hideDialogBox('importDialogBox')">
+            &times 
+    </button>
     <div>
         <textarea id="importedCurriculum" rows="20" cols="100"
                   placeholder="Paste curriculumn here"></textarea>
