--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <br><hr><br>
 
     <p>click on a course to see details</p>
-    <p>you can also move the courses by dragging and dropping</p>
+    <p>you can also move the courses around by dragging and dropping</p>
     
     
     <br><hr><br>
