Update Project: Added hide arrows feature

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 
 <div id="menu2" class="menu">
     <input type="checkbox" id="darktheme" name="darktheme" onchange="setDarkTheme()">
-    <label for="darktheme"> Enable dark mode</label><br>
+    <label for="darktheme">Enable dark mode</label><br>
+    <input type="checkbox" id="hideArrows" name="hideArrows" onchange="orientAllArrows(2)">
+    <label for="hideArrows">Hide arrows</label><br>
 </div>
 
 
