Update Project: added squishing to the left feature

--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <label for="darktheme">Enable dark mode</label><br>
     <input type="checkbox" id="hideArrows" name="hideArrows" onchange="orientAllArrows(2)">
     <label for="hideArrows">Hide arrows</label><br>
+    <hr>
+    <button type="button" id="squish" onclick="squish()">Squish courses left</button><br>
+    <div><input type="checkbox" id="constantSquishing" name="constantSquishing" onchange="squish()">
+    <label for="constantSquishing">Constant squishing</label></div><br>
 </div>
 
 
