Update Project: added calendar descriptions from sfu.ca

--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
         <p><b>Prerequisite(s): </b><span id="prereqs">???</span></p>
         <p><b>Typically offered terms(s): </b><span id="terms">???</span></p>
         <br>
+        <p><b><span id="descriptionTitle">Description Title</span></b> (<a id="source" target="_blank">source</a>)</p>
+        <p id="calendarDescription"></p>
 
     </div></div>
     
