Update Project: minor fixes

--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         <ul>
           <li>click on a course to see details</li>
           <li>you can also move the courses around by dragging and dropping</li>
-          <li>drink milk</li>
+          <li>you can determine if an ant's gender by seeing if it floats</li>
+          <li>you can specify a technical elective by first clicking a "MSE4XX" on the grid, then choosing the course in the set of options, then click "choose this option"</li>
         </ul>
     </div>
 </div></div>
