Update index.html: minor changes
- Welcomed feature suggestions.
- Removed development note.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="header">
     <h1>MSE Course Navigator</h1>
-    <p>NOTE: This web app is still in development</p>
+    <!-- <p>NOTE: This web app is still in development</p> --><br>
     <p>NOTE: This web app has not yet been developed for touch-screen use.</p>
 </div>
 
@@ -191,10 +191,12 @@
     <div>
         <p>If you spot an error or any inconsistencies, please report it to one of the following:</p><br>
         <ul>
-          <li><a href="https://github.com/jkhamanishi/course-navigator/issues">Github</a></li>
+          <li><a href="https://github.com/jkhamanishi/course-navigator/issues">GitHub</a></li>
           <!-- <li><a>MSESS via email</a></li> -->
           <li><a href="https://discord.gg/zpXtC57">MSESS via Discord</a></li>
         </ul>
+        <br>
+        <p>Feature suggestions are also welcomed. Please use GitHub to suggest a feature.</p>
     </div>
 </div></div>
 
