--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="data/courseData.js"></script>
 <script src="js/gridLoader.js"></script>
 <script src="js/main.js"></script>
+<script src="js/extraScripts.js"></script>
 <link rel="stylesheet" href="css/main.css">
 <title>MSE Course Navigator</title>
 <base target="_blank">
