--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="js/import-export.js"></script>
-<script src="data/default-curriculums.js"></script>
-<script src="data/courseData.js"></script>
-<script src="js/gridLoader.js"></script>
-<script src="js/main.js"></script>
-<script src="js/extraScripts.js"></script>
-<link rel="stylesheet" href="css/main.css">
-<title>MSE Course Navigator</title>
-<base target="_blank">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/import-export.js"></script>
+    <script src="data/default-curriculums.js"></script>
+    <script src="data/courseData.js"></script>
+    <script src="js/gridLoader.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/extraScripts.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <title>MSE Course Navigator</title>
+    <base target="_blank">
+    <link rel="icon" href="img/favicon_mask.svg">
+    <link rel="mask-icon" href="img/favicon_mask.svg" color="#000000">
 </head>
 
 <body>
