Added the dev's curriculum

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <option value="flexA" selected>Flexible Curriculum: Option A</option>
         <option value="flexB">Flexible Curriculum: Option B</option>
         <option value="flexC">Flexible Curriculum: Option C</option>
+        <option value="dev_curriculum">The Developer's Curriculum</option>
         <option value="import">Import...</option>
         <option value="custom" hidden>Custom</option>
     </select>
