Added option to download export data

--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
     </button>
     <div>
         <pre id="exportOutput">export code will appear here</pre>
-        <button id="copyExportButton">Copy Contents</button>
+        <button id="copyExportButton">Copy Contents to Clipboard</button>
+        <button id="saveExportButton">Save Contents as a File</button>
     </div>
 </div></div>
 
