Minor side panel course description bug fix

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <button type="button" id="exportButton" onclick="exportCurriculum();">Export</button><br>
     
     <div id="sideDetails" style="display: none;">
-        <input type="checkbox" id="detailInput" onchange="moveDetails()">
+        <input type="checkbox" id="detailInput" onchange="moveDetails()" checked>
         <label for="detailInput">Display details on side</label>
         <br>
     </div>
