--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <h1>MSE Course Navigator</h1>
     <!-- <p>NOTE: This web app is still in development</p> --><br>
     <p>NOTE: This web app has not yet been developed for touch-screen use.</p>
+    <p>NOTE: It may be best to zoom out on your browser to fit the entire table.</p>
 </div>
 
 <div id="menu1" class="menu">
@@ -30,9 +31,14 @@
         <div><a onclick="showDialogBox('resourcesDialogBox')">Resources</a></div>
     </div>
     <div style="display: block; height: 0.25em;"></div>
-    
+
+    <input type="checkbox" id="enable-starting-year" onchange="setStartingYear()">
+    <label for="enable-starting-year">Starting Year:</label>
+    <input type="number" id="starting-year" onchange="setStartingYear(true)">
+    <br>
+
     <label for="curriculum">Curriculum:</label>
-    <select name="curriculum" id="curriculum" onchange="changeCurriculum()">
+    <select id="curriculum" onchange="changeCurriculum()">
         <option value="fourY">4-Year Curriculum (post-Fall 2014)</option>
         <option value="flexA" selected>Flexible Curriculum: Option A</option>
         <option value="flexB">Flexible Curriculum: Option B</option>
@@ -61,10 +67,10 @@
     <input type="checkbox" id="hideArrows" name="hideArrows" onchange="orientAllArrows(2)">
     <label for="hideArrows">Hide arrows</label><br>
     
-    <span>Columns: </span>
+    <span style="display: inline-block; width: 70px;">Columns:</span>
     <button type="button" style="width: 1em" onclick="removeColumn()">-</button>/<button type="button" style="width: 1em" onclick="addColumn()">+</button><br>
 
-    <span>Terms: </span>
+    <span style="display: inline-block; width: 70px;">Terms: </span>
     <button type="button" style="width: 1em" onclick="removeTerm()">-</button>/<button type="button" style="width: 1em" onclick="addTerm()">+</button><br>
 
     <button type="button" id="squish" onclick="squish()">Squish courses left</button><br>
