Added the MSE & Business Double Degree Curriculum

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <option value="flexB">Flexible Curriculum: Option B</option>
         <option value="flexC">Flexible Curriculum: Option C</option>
         <option value="dev_curriculum">The Developer's Curriculum</option>
+        <option value="double_deg">MSE & Business Double Degree</option>
         <option value="import">Import...</option>
         <option value="custom" hidden>Custom</option>
     </select>
